refactor, 3.0.6