@@ -5,12 +5,12 @@ import org.slf4j.Logger;
 
 public class MyLogger {
    public static void log(String msg) {
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         System.err.println("TRACER tid: " + threadId + " " + msg);
    }
 
    public static void log(Logger logger, String msg) {
-        long threadId = Thread.currentThread().getId();
+        long threadId = Thread.currentThread().threadId();
         logger.info("TRACER tid: " + threadId + " " + msg);
    }
 }
